--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -20,17 +20,15 @@ body {
     margin-right: auto;
     max-width: 70em;
     padding-bottom: 6rem;
+    background-color: #fff;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-.site-masthead {
-    .hero-body {
-        padding-bottom: 1rem;
-    }
-    @media (max-width: 1023px) {
-        display: none;
-    }
+.site-header {
+    margin-bottom: 2.4rem;
 }
 
+/*
 .navigation .navbar.main-navigation {
    @media screen and (min-width: 1024px) {
        background: transparent;
@@ -59,6 +57,17 @@ body {
             }
        }
    }
+} */
+
+.article-header {
+    margin-bottom: 2.4rem;
+    .title {
+        margin-bottom: 0;
+    }
+}
+
+.block-feature img {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .columns.is-reversed {
